UCDetector 1.3.0 from 2009-:
Bugfixes:
 - [ 2826205 ] Can't make interface methods final
 - [ 2826216 ] Unused interface methods are not detected
 - [ 2804064 ] Access to enclosing type - make 2743908 configurable:
               Created new Checkbox

New features:
 - New preference: 'ignore Classes containing string'
 - [ 2832790 ] Custom annotation filter
 - TODO: [ 2824564 ] Group preferences

// -----------------------------------------------------------------------------

UCDetector 1.2.0 from 2009-07-21:
Bugfixes:
 - [ 2783734 ] Static imports are not recognized
 - [ 2787576 ] Waiting for first 10 markers
 - [ 2776029 ] Final for fields initialized in subclass constructors
 - [ 2808853 ] Don't create "0 references marker" for classes with main methods
 - [ 2811049 ] Html report is overridden each run
 - [ 2810802 ] UCDetector crashes with an Exception
 - [ 2804064 ] Access to enclosing type - make 2743908 configurable
 - [ 2779970 ] Compile error for: static variable

New features:
 - Improved running UCDetector headless: More Options. Refresh/compile workspace
 - Detect order changed: Detect a complete class, then detect next class
 - Removed method/field detection of anonymous classes. Already done by eclipse, slow
 - [ 2803618 ] Add number of references to report
 - [ 2658675 ] Want annotations, not comments, to indicate non-dead code
-  [ 2810803 ] Change visibility options more comfortable

// -----------------------------------------------------------------------------
UCDetector 1.1.0 from 2009-04-15:
Bugfixes:
 - [ 2743872 ] Don't check for constructors called only 1 time
 - [ 2743908 ] Methods only called from inner class could be private
 - [ 2762967 ] XmlReport: Problems running UCDetector

// -----------------------------------------------------------------------------
UCDetector 1.0.0 from 2009-04-03:
New features:
 - [ 2409697 ] Detect code only called from tests
 - [ 2373808 ] Classes found by text search should have no markers